# template_fullstack

./: .gitignore  README.md  docker-compose.yml  manual-test-cases.md  playwright-test-guide.md
backend/: .env  Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/tests/: test_main.py
docs/development/: bugs.md
frontend/: .env.development  Dockerfile  package-lock.json  package.json  playwright.config.js  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.js
frontend/src/components/: ErrorMessage.js  LessonCard.js  LoadingSpinner.js  Navbar.js
frontend/src/hooks/: useFetch.js
frontend/src/pages/: About.js  Home.js  LessonDetail.js  Lessons.js
frontend/src/services/: api.js
frontend/tests/: example.spec.js  home.spec.js  homepage.spec.js  simple.test.js
labs/: copy_code.py
